<resources>

    <!-- TODO: Make strings consistent -->
    <!-- TODO: Standardize string naming conventions -->
    <!-- TODO: Eliminate use leading spaces in strings to correct layout issues -->

    <string name="app_name">FONCF Photo-Points</string>

    <!-- About us Strings -->
    <string name="appDescription"> The purpose of this app is to help monitor the lifecycle of plant life and stream quality</string>
    <string name="viewMore"> If you would like to view more information about the site please visit these links</string>
    <string name="Donate">https://www.friendsnorthcreekforest.org/support--donate.html</string>
    <string name="Home">https://www.friendsnorthcreekforest.org/</string>

    <!-- Scanner strings -->
    <string name="take_barcode_picture">Camera</string>
    <string name="scan_barcode">Scan </string>
    <string name="open_camera">OPEN CAMERA</string>
    <string name="send_email">SEND EMAIL</string>

    <!-- Nav Drawer Strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="splash_nav">Welcome</string>
    <string name="create_profile_nav">Create Profile</string>
    <string name="home_nav">Home</string>
    <string name="scan_nav">Scan</string>
    <string name="plant_nav">Plants</string>
    <string name="about_nav">About</string>
    <string name="contact_nav">Contact</string>

    <!-- Activity and Fragment Strings -->
    <string name="create_profile">Create Profile</string>
    <string name="first_name">  First Name</string>
    <string name="last_name">  Last Name</string>
    <string name="email">  E-Mail</string>
    <string name="age">  Age</string>
    <string name="submit">Submit</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="open_scanner">Open Scanner</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send_button">Send</string>
    <string name="email_address">Email Address:</string>
    <string name="hint_email_body">Message</string>
    <string name="results">Results</string>
    <string name="no_barcode_detected">No Barcode Detected</string>
    <string name="add_content_via_email">ADD CONTENT USING EMAIL</string>
    <string name="add_information">Add Information</string>
    <string name="type_of_weather">Type of Weather</string>
    <string name="temp_string_filler">Filler</string>
    <string name="action_upload">Upload</string>
    <string name="collect_data">Collect Data</string>
    <string name="action_upload_plant_data">Upload Plant Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
