<?xml version="1.0" encoding="utf-8"?>

<!-- TODO: Fix missing constraints on views in ConstraintLayout -->
<!-- TODO: Standardize View id names -->
<!-- TODO: Determine how the IDE deals with package/module names that are in xml/quotes -->
<!-- TODO: Consider refactor of descriptive names of Views -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Email">


    <Button
        android:id="@+id/btnSendEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inBody"
        android:layout_centerHorizontal="true"
        android:text="@string/send_email"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="397dp" />


    <TextView
        android:id="@+id/txtEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/email_address"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmailAddress"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/subject"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="287dp" />

    <EditText
        android:id="@+id/inBody"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/inSubject"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/hint_email_body"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="232dp" />

</androidx.constraintlayout.widget.ConstraintLayout>