<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/northcreek_background"
    tools:context="edu.cascadia.mobas.northcreekforest.About">

    // Display about us information

    <TextView
        android:id="@+id/textView2"
        android:layout_width="352dp"
        android:layout_height="155dp"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="87dp"
        android:layout_marginBottom="91dp"
        android:text="@string/appDescription"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    //Link to FNCF.org

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="109dp"
        android:autoLink="web"
        android:text="@string/Home"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    //Link to FNCF donate

    <TextView
        android:id="@+id/textView4"
        android:layout_width="294dp"
        android:layout_height="85dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"

        android:layout_alignParentEnd="true"
        android:autoLink="web"
        android:text="@string/Donate"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="480dp" />



</androidx.constraintlayout.widget.ConstraintLayout>